--- a/VScoutMaui/VScoutMaui/Views/JustInTimeRectangeView.xaml
+++ b/VScoutMaui/VScoutMaui/Views/JustInTimeRectangeView.xaml
@@ -11,8 +11,8 @@
         <Label Text="{Binding Station, StringFormat='Station: {0}'}" VerticalOptions="Center" HorizontalOptions="Center" />
         <Label Text="{Binding Rank, StringFormat='Rank: {0}'}" VerticalOptions="Center" HorizontalOptions="Center" />
         <Label Text="{Binding RoundsPlayed, StringFormat='Rounds Played: {0}'}" VerticalOptions="Center" HorizontalOptions="Center" />
-        <Label Text="{Binding AverageAmp, StringFormat='Avg High Cones: {0}'}" VerticalOptions="Center" HorizontalOptions="Center" />
-        <Label Text="{Binding AverageSpeaker, StringFormat='Avg Mid Cones: {0}'}" VerticalOptions="Center" HorizontalOptions="Center" />
+        <Label Text="{Binding AverageAmp, StringFormat='Avg Amp: {0}'}" VerticalOptions="Center" HorizontalOptions="Center" />
+        <Label Text="{Binding AverageSpeaker, StringFormat='Avg Speaker: {0}'}" VerticalOptions="Center" HorizontalOptions="Center" />
         <Label Text="{Binding Comments, StringFormat='Comments: {0}'}" VerticalOptions="Center" HorizontalOptions="Center" LineBreakMode="WordWrap" />
     </VerticalStackLayout>
 </ContentView>
